# nyacore-autosplitter

./: Cargo.toml  README.md
.github/workflows/: release.yml
schemas/: ac6.toml  ds1_remastered.toml  ds2_complete.toml  ds2_example.toml  ds3.toml  ds3_complete.toml  elden_ring.toml  elden_ring_complete.toml  game_data.toml  sekiro.toml
scripts/: armored_core_6.asl  dark_souls_1_remastered.asl  dark_souls_3.asl  ds2_sotfs.asl  elden_ring.asl  sekiro.asl
src/: config.rs  engine.rs  game_data.rs  lib.rs
src/asl/: ast.rs  converter.rs  error.rs  lexer.rs  memory.rs  mod.rs  parser.rs  runtime.rs  types.rs
src/core/: events.rs  mod.rs  runner.rs  state.rs
src/engines/: algorithm.rs  asl.rs  mod.rs  rhai_engine.rs
src/games/: armored_core_6.rs  common.rs  config.rs  configurable.rs  dark_souls_1.rs  dark_souls_2.rs  dark_souls_3.rs  elden_ring.rs  event_flags.rs  mod.rs  registry.rs  sekiro.rs
src/memory/: abstract_pointer.rs  linux.rs  mod.rs  pattern.rs  pointer.rs  process.rs  reader.rs  traits.rs  windows.rs
src/readers/: binary_tree.rs  category.rs  flag_reader.rs  kill_counter.rs  mod.rs  offset_table.rs  plugin_reader.rs
src/triggers/: config.rs  evaluator.rs  mod.rs  trigger_evaluator.rs  triggers.rs  types.rs
src/vision/: capture.rs  config.rs  detector.rs  mod.rs  runner.rs  trigger.rs
tests/: ds2_asl_test.rs
