[package]
name = "nyacore-autosplitter"
version = "0.1.0"
edition = "2021"
authors = ["HitCounter Contributors"]
license = "MIT OR Apache-2.0"
description = "Generic memory-based autosplitter engine with support for algorithms, Rhai scripting, and LiveSplit ASL"
repository = "https://github.com/valkyaha/nyacore-autosplitter"

[features]
default = ["rhai-scripting"]
vision = ["dep:image", "dep:imageproc"]
rhai-scripting = ["dep:rhai"]

[dependencies]
# Core
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Scripting
rhai = { version = "1.19", features = ["sync"], optional = true }

# Async/threading
parking_lot = "0.12"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_ProcessStatus",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

# Vision feature (optional)
image = { version = "0.25", optional = true }
imageproc = { version = "0.25", optional = true }

[dev-dependencies]
env_logger = "0.11"
