[package]
name = "nyacore-autosplitter"
version = "0.1.0"
edition = "2021"
description = "Autosplitter module for NYA Core - automatic boss defeat detection for FromSoftware games"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
log = "0.4"

# Cross-platform
once_cell = "1.19"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
] }

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[features]
default = []
vision = []
